fixed alignment for projectImages on mobile

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -611,6 +611,10 @@ there.
     #navBarRow {
     margin-left: 10%;
   }
+	
+.projectImages{
+    margin-left: 1%;
+  }
 }
 
 @media (min-width: 550px) {
